--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>📬תיבת הודעות</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="/css/mailbox.css">
+  <link rel="stylesheet" href="/css/mailbox.css"/>
 </head>
 <body>
   <header>
