--- a/public/see-messages.html
+++ b/public/see-messages.html
@@ -945,7 +945,18 @@
         
         // Initial app start
         window.onload = initializeAppAndAuth;
-
+        
+  <script src="/js/auth.js"></script>
+  <script src="/js/inbox-ui.js"></script>
+  <script src="/js/compose.js"></script>
+  <script src="/js/drafts.js"></script>
+  <script src="/js/attachments.js"></script>
+  <script src="/js/contacts.js"></script>
+  <script src="/js/notifications.js"></script>
+  <script src="/js/ai.js"></script>
+  <script src="/js/search.js"></script>
+  <script src="/js/calendar.js"></script>
+  <script src="/js/dashboard.js"></script>
     </script>
 </body>
 </html>
