--- a/public/mailbox1.html
+++ b/public/mailbox1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/mail.jsx"></script>
+    <script type="module" src="/mail.js"></script>
 </body>
 </html>
