--- a/public/mailbox1.html
+++ b/public/mailbox1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/EmailApp.jsx"></script>
+    <!-- כאן טוענים את הקובץ המעובד, לא את קובץ המקור -->
+    <script type="module" src="/bundle.js"></script>
 </body>
 </html>
