--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,14 @@
     <console.log("User is logged in:", user);
     // עדכון UI בהתאם
   });
+        <section>
+            <h2>חדשות ועדכונים</h2>
+            <ul>
+                <li>הוספנו יכולת העלאת תמונות לעץ המשפחה.</li>
+                <li>נפתחה מערכת ההודעות הפנימית לכל המשתמשים.</li>
+                <li>ניתן להדליק נר דיגיטלי לעילוי נשמת יקיריכם.</li>
+            </ul>
+        </section>
 
 
     <section class="hero-image">
