--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
 
 
     <section class="hero-image">
-      <img src="/assets/family-hero.PNG" alt="תמונת משפחה" />
+      <img src="/assets/family-hero.png" alt="תמונת משפחה" />
     </section>
 
   <footer>
