--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-white min-h-screen flex items-center justify-center">
   <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md">
-    <h1 class="text-3xl font-bold mb-6 text-center text-blue-700">👋 ברוכים הבאים לאתר המשפחתי</h1>
+    <h1 class="text-3xl font-bold mb-6 text-center text-blue-700">👋 Welcome to the Family Platform!</h1>
     <form action="/login" method="POST" class="space-y-4">
       <div>
         <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
