--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -4,6 +4,30 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>דוא"ל פנימי - Family Mail</title>
+  // בדיקת משתמש מחובר
+<let currentUser = null;
+try {
+  const res = await fetch("/api/user");
+  <if (res.ok) {
+    const user = await res.json();
+    currentUser = user;
+    if (usernameDisplay) {
+      usernameDisplay.textContent = `מחובר כ־${user.username}`;
+    }
+  } else {
+    console.error(`שגיאה בהתחברות: קוד סטטוס ${res.status}`);
+    const errorMessage = await res.text();
+    console.error(`הודעת שגיאה מהשרת: ${errorMessage}`);
+    if (window.location.pathname !== "/login.html") {
+      location.href = "/login.html";
+    }
+  }
+} catch (err) {
+  console.error("שגיאה בבדיקת התחברות:", err);
+  <if (window.location.pathname !== "/login.html") {
+    location.href = "/login.html";
+  }
+}
 
   <!-- Tailwind CDN (לשמור על אותו עיצוב כמו ב-React) -->
   <script src="https://cdn.tailwindcss.com"></script>
