--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>דוא"ל פנימי - Family Mail</title>
+  <!-- Firebase App -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<!-- Firebase Auth -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   // בדיקת משתמש מחובר
 <let currentUser = null;
 try {
