--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -6,8 +6,10 @@
   <title>דוא"ל פנימי - Family Mail</title>
   </head>
   <body>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
 
   // בדיקת משתמש מחובר
 <let currentUser = null;
