--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -31,7 +31,7 @@ try {
   }
 } catch (err) {
   console.error("שגיאה בבדיקת התחברות:", err);
-  <if (window.location.pathname !== "/login.html") {
+  <if> (window.location.pathname !== "/login.html") {
     location.href = "/login.html";
   }
 }
