--- a/public/memory-example-wall.html
+++ b/public/memory-example-wall.html
@@ -217,7 +217,7 @@
               let chatHistory = [];
               chatHistory.push({ role: "user", parts: [{ text: prompt }] });
               const payload = { contents: chatHistory };
-              const apiKey = "" 
+              const apiKey = "AIzaSyBhBW1_bshNIB3VS4JsGsQh6aCxB6g8WVE" 
               const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
               
               const response = await fetch(apiUrl, {
