--- a/public/memory-example-wall.html
+++ b/public/memory-example-wall.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>קיר זיכרון משפחתי</title>
     <!-- Tailwind CSS CDN -->
+        <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body { font-family: 'Heebo', sans-serif; }
     </style>
@@ -14,7 +15,7 @@
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, collection, addDoc, onSnapshot, doc, updateDoc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
-          const firebaseConfig = {
+          import firebaseConfig = {
            apiKey: "AIzaSyDLdJ9QbuZ35ARRPg2oqSgq4raOqc8ygiU",
           authDomain: "memorials-ee781.firebaseapp.com",
          projectId: "memorials-ee781",
