--- a/public/memory-example-wall.html
+++ b/public/memory-example-wall.html
@@ -15,7 +15,7 @@
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, collection, addDoc, onSnapshot, doc, updateDoc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
-          import firebaseConfig = {
+          import firebaseConfig {
            apiKey: "AIzaSyDLdJ9QbuZ35ARRPg2oqSgq4raOqc8ygiU",
           authDomain: "memorials-ee781.firebaseapp.com",
          projectId: "memorials-ee781",
